--- a/upload/oneallsociallogin/upload/mails/da/oneallsociallogin_account.html
+++ b/upload/oneallsociallogin/upload/mails/da/oneallsociallogin_account.html
@@ -54,7 +54,7 @@
 				</tr>
 				<tr>
 					<td style="font-size: 10px; border-top: 1px solid #D9DADE;" align="center">
-						<a style="color: {color}" href="{shop_url}">{shop_name}</a> powered by <a style="text-decoration: none; color: #374953;" href="http://www.prestashop.com/">PrestaShop&trade;</a>
+						<a style="color: {color}" href="{shop_url}">{shop_name}</a> powered by <a style="text-decoration: none; color: #374953;" href="https://www.prestashop.com/">PrestaShop&trade;</a>
 					</td>
 				</tr>
 			</tbody>
@@ -74,7 +74,7 @@
 				</tr>
 				<tr>
 					<td style="font-size: 10px; border-top: 1px solid #D9DADE;" align="center">
-						<a style="color: {color}" href="{shop_url}">{shop_name}</a> powered by <a style="text-decoration: none; color: #374953;" href="http://www.prestashop.com/">PrestaShop&trade;</a>
+						<a style="color: {color}" href="{shop_url}">{shop_name}</a> powered by <a style="text-decoration: none; color: #374953;" href="https://www.prestashop.com/">PrestaShop&trade;</a>
 					</td>
 				</tr>
 			</tbody>
